src/test/deca/syntax/invalid/parser/oracle/field_multi_decl2.deca
class A { int a = "e
			e";}